src/frontend/css/cloobster.css
/* ... */
/** app config partial */
/* line 702, sass/cloobster.scss */
.tile, .tile-template {
  font-size: 0.9em;
  color: black;
  position: relative;
  background-color: #f5f5f5;
  border: 1px solid lightgray;
  border-radius: 2px;
  height: 120px;
  width: 120px;
  max-height: 200px;
  -webkit-box-shadow: 0 4px 2px -2px #eee;
  box-shadow: 0 4px 2px -2px #eee;
  margin: 0 5px 5px 0;
  float: left;
  overflow: hidden;
  z-index: 2;
}

/* static tiles like feedback have another background color to distinguise the, */
/* line 721, sass/cloobster.scss */
.tile-static {
  background-color: #e9e9e9;
}

/* line 725, sass/cloobster.scss */
.tile-active {
  background-color: lightblue !important;
}

/* line 729, sass/cloobster.scss */
.tile-empty {
  float: left;
  height: 120px;
  width: 120px;
  border: 1px dashed lightgray;
  /*background-color: #f5f5f5;*/
  text-align: center;
  margin: 0 5px 5px 0;
}

/* line 739, sass/cloobster.scss */
.tile-icon {
  background-repeat: no-repeat;
  background-position: center;
  width: 100%;
  height: 80px;
  background-size: 75px;
}

/* line 747, sass/cloobster.scss */
.tile-title {
  width: 100%;
  /*height: 25px;*/
  font-size: 1.1em;
  text-overflow: ellipsis;
  overflow: hidden;
  color: black;
  text-align: center;
  box-sizing: border-box;
  padding: 0 3px;
}

/* line 759, sass/cloobster.scss */
.tile-number {
  font-size: 30px;
  line-height: 40px;
  font-weight: bold;
  text-align: center;
  color: #C3C3C3;
}

/* line 767, sass/cloobster.scss */
.tile-delete {
  display: none;
  position: absolute;
  top: 3px;
  right: 3px;
  border-radius: 10px;
  width: 20px;
  height: 20px;
  text-align: center;
  background-color: black;
  line-height: 20px;
  font-size: 16px;
  font-weight: bold;
  color: white;
  z-index: 1;
}

/* line 784, sass/cloobster.scss */
.tile-disabled {
  position: absolute;
  width: 100%;
  height: 100%;
}

/* line 790, sass/cloobster.scss */
.tile-disabled .tile-mask {
  background-color: white;
  opacity: .55;
  width: 100%;
  height: 100%;
}

/* line 797, sass/cloobster.scss */
.tile-disabled .tile-text {
  position: absolute;
  top: 40%;
  text-align: center;
  color: #d14641;
  font-size: 16px;
  font-weight: bold;
  width: 100%;
  transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  -webkit-transform: rotate(30deg);
}

/* line 810, sass/cloobster.scss */
.tile:hover .tile-delete {
  display: block;
}

/* line 814, sass/cloobster.scss */
.tile-config-highlight {
  background-color: yellow;
}

/* line 818, sass/cloobster.scss */
.tile-feedback .tile-icon {
  background-image: url("../img/tiles/feedback.png");
}

/* line 822, sass/cloobster.scss */
.tile-products .tile-icon {
  background-image: url("../img/tiles/menue_bag.png");
}

/* line 826, sass/cloobster.scss */
.tile-infopages .tile-icon {
  background-image: url("../img/tiles/info.png");
}

/* line 830, sass/cloobster.scss */
.tile-actions .tile-icon {
  background-image: url("../img/tiles/vip.png");
}

/* line 834, sass/cloobster.scss */
.tile-de-ztix-events .tile-icon {
  background-image: url("../img/tiles/calendar.png");
}

/* line 838, sass/cloobster.scss */
.smartphone-frame {
  background-image: url("../img/tiles/gn_frame.png");
  width: 100%;
  height: 800px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

/* line 847, sass/cloobster.scss */
.smartphone-content {
  width: 300px;
  height: 464px;
  position: relative;
  top: 147px;
  left: 84px;
  overflow-y: auto;
  padding-left: 15px;
  border: 2px solid transparent;
  box-sizing: border-box;
}

/* line 859, sass/cloobster.scss */
.tile-container-config-highlight {
  border: 2px dashed red !important;
}

/* line 863, sass/cloobster.scss */
.mask {
  top: 0;
  left: 0;
  /* must be lower than dragable */
  z-index: 99;
  background-color: #000;
  opacity: .4;
  display: none;
  height: 1000px;
  width: 100%;
  position: absolute;
  color: white;
  text-align: center;
  font-size: 50px;
  line-height: 50px;
  top: 277px;
  left: 84px;
  width: 281px;
  height: 464px;
}

/* line 884, sass/cloobster.scss */
.mask > div {
  top: 150px;
  position: relative;
}

/* line 889, sass/cloobster.scss */
.drop-active .mask {
  display: block;
}

/* line 893, sass/cloobster.scss */
.app-help-image {
  height: 500px;
  background-image: url("../img/apphelp.jpg");
  background-size: 350px auto;
  background-position: center;
  background-repeat: no-repeat;
  min-width: 350px;
}

/* line 902, sass/cloobster.scss */
.app-image {
  height: 500px;
  background-image: url("../img/app_screenshot.png");
  background-size: auto 100%;
  background-position: center;
  background-repeat: no-repeat;
}

